--- a/inedx.html
+++ b/inedx.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My test page</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 </body>
+<h1>Mozilla is cool</h1>
+<img src="image/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+<p>At Mozilla, we’re a global community of</p>
 
 </html>
